--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Sonsie+One&display=swap');
+
+.main-container{
+    margin: auto;
+    background-color: #f03a17;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 500px;
+    width: 600px;
+    border-radius: 10px;
+}
+
 .container{
     margin: auto;
     width: 500px;
@@ -10,6 +23,8 @@
     border: dimgrey 1px solid;
     height: 300px;
     text-align: center;
+    background-color: linen;
+    border-radius: 8px;
 }
 
 #input{
@@ -25,4 +40,10 @@
 
 h1{
     text-align: center;
+    font-family: 'Sonsie One', cursive;
+    color: #ffc83d;
+    -webkit-text-stroke: 5px black;
+    paint-order: stroke fill;
+    margin-top: 0px;
+    margin-bottom: 40px;
 }
