--- a/client/style.css
+++ b/client/style.css
@@ -1,22 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Sonsie+One&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: sans-serif;
+}
+
 .main-container{
-    margin: auto;
+    margin: 40px auto;
     background-color: #f03a17;
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    align-items: center;
     height: 500px;
     width: 600px;
     border-radius: 10px;
 }
 
-.container{
-    margin: auto;
+.content-container{
     width: 500px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 
 .target{
@@ -46,4 +54,11 @@ h1{
     paint-order: stroke fill;
     margin-top: 0px;
     margin-bottom: 40px;
+}
+
+li {
+    background-color: #f1dcc7;
+    margin: 5px;
+    list-style-type: none;
+    padding: 5px;
 }
