--- a/client/style.css
+++ b/client/style.css
@@ -22,17 +22,17 @@ h1 {
     margin-top: 0px;
 }
 
-li {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+.message-item {
     background-color: #f1dcc7;
-    list-style-type: none;
     padding: 6px;
     margin: 4px 0;
     text-align: left;
-    height: auto;
+    overflow-wrap: anywhere;
+}
+
+.message-username {
+    font-size: 14px;
+    color: #d48c00;
 }
 
 label {
@@ -182,6 +182,8 @@ input:focus {
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 3px;
+    background-color: rgba(255,255,255,0.6);
+    border-radius: 5px 5px 0 0 ;
 }
 
 .toggle-popup {
@@ -261,7 +263,7 @@ textarea:focus {
     --emoji-1: '😸';
     --emoji-2: '😺';
     animation-name: threeFrames;
-    animation-duration: 1.2s;
+    animation-duration: 1s;
 }
 
 @keyframes threeFrames {
